--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -5,8 +5,8 @@ const { pathname } = Astro.url;
 
 const links: { href: string; text: string }[] = [
     { href: "/", text: "Home" },
-    { href: "/about", text: "About" },
-    { href: "/explore", text: "Explore" },
+    { href: "/about/", text: "About" },
+    { href: "/explore/", text: "Explore" },
 ];
 ---
 
