--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,27 @@
 ---
-import { getCollection } from "astro:content";
+import {
+    blogIndex as blogIndexPromise,
+    type HierarchicalBlogNode,
+} from "../blogIndex";
 import Listing from "../components/Listing.astro";
 import Layout from "../layouts/Base.astro";
 
-const posts = (await getCollection("blog")).filter(
-    (post) => post.data.draft !== true && post.data.kind !== undefined,
+const allNodesMap = await blogIndexPromise;
+
+const postsForHomepage: HierarchicalBlogNode[] = Array.from(
+    allNodesMap.values(),
+).filter(
+    (node) =>
+        !node.isFolder &&
+        node.data &&
+        !node.data.draft &&
+        node.data.kind !== undefined,
 );
 ---
 
 <Layout>
-    <div class="mx-auto max-w-2xl font-serif">
+    <div class="mx-auto max-w-2xl">
         <h1 class="mb-6 text-3xl font-semibold text-dark">Latest Posts</h1>
-        <Listing posts={posts} />
+        <Listing posts={postsForHomepage} />
     </div>
 </Layout>
