--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -136,19 +136,17 @@ const backlinkData = currentNode.backlinks
                 breadcrumbs={[...breadcrumbSegments]}
             />
         </div>
+        <h1 class="mt-2 mb-6 font-serif text-3xl font-semibold text-dark">
+            {pageTitle}
+        </h1>
         <Prose>
-            <h1 class="mt-2 text-dark">
-                {pageTitle}
-            </h1>
             {FolderNoteContentComponent && <FolderNoteContentComponent />}
-
             {
                 !currentNode.isFolder && PostContentComponent && (
                     <PostContentComponent />
                 )
             }
         </Prose>
-
         {
             currentNode.isFolder && childrenForListing.length > 0 && (
                 <div
@@ -161,16 +159,15 @@ const backlinkData = currentNode.backlinks
                 </div>
             )
         }
-
         {
             backlinkData.length > 0 && (
-                <div class="mt-8 border-t pt-4">
+                <div class="mt-8 border-t pt-4 text-dark">
                     {backlinkData.length > 0 && (
-                        <div class="mb-6">
-                            <h2 class="mb-2 text-xl font-semibold">
+                        <>
+                            <h2 class="mb-2 font-serif text-xl font-semibold">
                                 Backlinks
                             </h2>
-                            <ul class="list-disc space-y-1 pl-5">
+                            <ul class="list-disc pl-5">
                                 {backlinkData.map((link) => (
                                     <li>
                                         <a
@@ -182,7 +179,7 @@ const backlinkData = currentNode.backlinks
                                     </li>
                                 ))}
                             </ul>
-                        </div>
+                        </>
                     )}
                 </div>
             )
